--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,15 +9,15 @@
 }
 
 a,
-.green {
+.light-blue {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #ADD8E6;
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: #6592A6;
   }
 }
 
