--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,13 +11,13 @@
 a,
 .light-blue {
   text-decoration: none;
-  color: #ADD8E6;
+  color: #00ABFF;
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: #6592A6;
+    background-color: #373737;
   }
 }
 
